test/should-fail/vsgc1248.f3
/*
 * @test/compile-error
 */

for(i in [1..100],j in {continue;[2..100];}){
        java.lang.System.out.println("break test");
}
